small fix z-index of floating inforamtion

--- a/public/css/certificates.css
+++ b/public/css/certificates.css
@@ -166,7 +166,7 @@
     margin: 0;
     padding: 0;
     bottom: 0;
-    z-index: 200;
+    z-index: 199;
     /* max-width: 450px; */
     transition: all .3s ease-in-out;
 }
